k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: purge-ldl
  labels:
    app.kubernetes.io/name: purge-ldl
    app.kubernetes.io/component: app
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: purge-ldl
    app.kubernetes.io/component: app
  ports:
    - name: http
      port: 80
      targetPort: http
